fix control z-index

--- a/scss/cbplayer.scss
+++ b/scss/cbplayer.scss
@@ -110,6 +110,7 @@ audio{
 	opacity: 0;
 	visibility: hidden;
 	align-items: center;
+	z-index: 1;
 
 	.cb-media-is-ready &{
 		opacity: 1;
